5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/2171/executions/1643_2703.log
== TEST (2019-04-08 18:45:58) 
-- CODE:
x = float(input("idade de uma pessoa ; "))
idade 18>= 18
if = ("eleitor")

else = ("nao_elitor")
print(idade)
-- ERROR:
File "XXXX", line 2
    idade 18>= 18
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:51:05) 
-- CODE:
x = float(input("idade de uma pessoa ; "))
if 18<idade:
 print("eleitor")

else: = ("nao_elitor")
print("nao_elitor")
-- ERROR:
File "XXXX", line 5
    else: = ("nao_elitor")
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:51:17) 
-- CODE:
x = float(input("idade de uma pessoa ; "))
if 18<idade:
 print("eleitor")

else: ("nao_elitor")
print("nao_elitor")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    if 18<idade:
NameError: name 'idade' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:51:34) 
-- CODE:
x = float(input("idade de uma pessoa ; "))
if 18<idade:
 print("eleitor")

else: ("nao_elitor")
print("nao_elitor")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    if 18<idade:
NameError: name 'idade' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:52:03) 
-- CODE:
x = float(input("idade de uma pessoa ; "))
if 18 < idade:
 print("eleitor")

else: ("nao_elitor")
print("nao_elitor")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    if 18 < idade:
NameError: name 'idade' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:52:21) 
-- CODE:
x = float(input("idade de uma pessoa ; "))
if 18<idade:
 print("eleitor")

else: ("nao_elitor")
print("nao_elitor")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    if 18<idade:
NameError: name 'idade' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:53:21) 
-- CODE:
x = int(input("idade de uma pessoa ; "))
if 18<idade:
print("eleitor")

else:
	("nao_elitor")
print("nao_elitor")
-- ERROR:
File "XXXX", line 3
    print("eleitor")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:54:04) 
-- CODE:
x = int(input("idade de uma pessoa ; "))
if (18<idade):
	print("eleitor")

else:
	("nao_elitor")
	print("nao_elitor")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    if (18<idade):
NameError: name 'idade' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:54:29) 
-- CODE:
x = float(input("idade de uma pessoa ; "))
if (18<idade):
	print("eleitor")

else:
	("nao_elitor")
	print("nao_elitor")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    if (18<idade):
NameError: name 'idade' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:54:53) 
-- CODE:
idade=int(input("idade de uma pessoa ; "))
if (18<idade):
	print("eleitor")

else:
	("nao_elitor")
	print("nao_elitor")
-- OUTPUT:
nao_elitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:55:15) 
-- CODE:
idade=int(input("idade de uma pessoa ; "))
if (18<idade):
	print("eleitor")

else:
	print("nao_elitor")
-- OUTPUT:
nao_elitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 18:55:29) 
-- CODE:
idade=int(input("idade de uma pessoa ; "))
if (18<idade):
	print("eleitor")

else:
	print("nao_elitor")
-- EXECUTION TIME:
0.18163
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_elitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:55:42) 
-- CODE:
idade=int(input("idade de uma pessoa ; "))
if (18<idade):
	print("eleitor")

else:
	print("nao_elitor")
-- OUTPUT:
nao_elitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 18:55:47) 
-- CODE:
idade=int(input("idade de uma pessoa ; "))
if (18<idade):
	print("eleitor")

else:
	print("nao_elitor")
-- EXECUTION TIME:
0.209413
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_elitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:55:58) 
-- CODE:
idade=int(input("idade de uma pessoa ; "))
if (18<idade):
	print("eleitor")

else:
	print("nao_elitor")
-- OUTPUT:
nao_elitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 18:56:03) 
-- CODE:
idade=int(input("idade de uma pessoa ; "))
if (18<idade):
	print("eleitor")

else:
	print("nao_elitor")
-- EXECUTION TIME:
0.179323
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_elitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:56:17) 
-- CODE:
idade=int(input("idade de uma pessoa ; "))
if (18<idade):
	print("eleitor")

else:
	print("nao_elitor")
-- OUTPUT:
nao_elitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 18:56:25) 
-- CODE:
idade=int(input("idade de uma pessoa ; "))
if (18<idade):
	print("eleitor")

else:
	print("nao_elitor")
-- EXECUTION TIME:
0.141391
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_elitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:57:11) 
-- CODE:
idade=int(input("idade de uma pessoa ; "))
if (18<idade):
	print("nao_eleitor")

else:
	print("elitor")
-- OUTPUT:
elitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 18:57:17) 
-- CODE:
idade=int(input("idade de uma pessoa ; "))
if (18<idade):
	print("nao_eleitor")

else:
	print("elitor")
-- EXECUTION TIME:
0.142026
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
elitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
nao_eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
nao_eleitor
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:57:59) 
-- CODE:
idade=int(input("idade de uma pessoa ; "))
if (idade<18):
	print("nao_eleitor")

else:
	print("eleitor")
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 18:58:04) 
-- CODE:
idade=int(input("idade de uma pessoa ; "))
if (idade<18):
	print("nao_eleitor")

else:
	print("eleitor")
-- EXECUTION TIME:
0.188564
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
